--- a/PodoDemo/Views/Users/Create.cshtml
+++ b/PodoDemo/Views/Users/Create.cshtml
@@ -1,145 +1,168 @@
 ﻿@model PodoDemo.Models.User
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "사용자";
 }
 
-<h2>Create</h2>
+<script type="text/javascript">
+    $(document).ready(function () {
+        // 검색 조건 키 / 적용할 HTML코드 ID / 콜백함수 / 기본 선택 값 / 전체 / 맨위값 빈값 / 권한
+        GetOptionDDL('1', 'Department', SetoptionTag, '', true, false, false);
+        GetOptionDDL('3', 'Position', SetoptionTag, '', true, false, false);
+        GetOptionDDL('2', 'Level', SetoptionTag, '', true, false, false);
+    });
 
-<form asp-action="Create">
-    <div class="form-horizontal">
-        <h4>User</h4>
-        <hr />
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <div class="form-group">
-            <label asp-for="Pw" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Pw" class="form-control" />
-                <span asp-validation-for="Pw" class="text-danger"></span>
+    // 메뉴 수정 내용 저장
+    function SubmitForm() {
+        // 유효성 검사 후 진행
+        if (ValidateForm()) {
+            $("#UserCreateForm").prop("action", "/Users/Create");
+            $("#UserCreateForm").prop("method", "post");
+            $("#UserCreateForm").submit();
+        }        
+    }
+
+    // 입력한 값들에 대한 유효성 검사
+    function ValidateForm() {
+        var name = $("#Name").val();
+        var order = $("#Order").val();
+        var menuurl = $("#Menuurl").val();
+        var mainmenuid = $("#Mainmenuid").val();
+        //var ceoValue = $("#Ceo").val();
+        //var biznumValue = $("#Biznum").val();
+
+        if (name == "") {
+            alert("상세 메뉴 이름을 입력해주세요.");
+            return false;
+        }
+
+        if (order == "") {
+            alert("순서를 입력해주세요.");
+            return false;
+        }
+
+        if (menuurl == "") {
+            alert("상세 메뉴의 접속 URL을 입력해주세요.");
+            return false;
+        }
+
+        if (mainmenuid == "") {
+            alert("연결된 메뉴 ID가 존재하지 않습니다.\n처음부터 다시 시도해주세요.");
+            return false;
+        }
+        return true;
+    }
+</script>
+<div class="View">
+    <div class="container custom-container">
+        <div class="row">
+            <div class="col-md-12 custom-header">
+                <p class="text-left">사용자 생성</p>
             </div>
         </div>
-        <div class="form-group">
-            <label asp-for="Name" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+
+        <div class="col-md-12">
+            <div class="custom-title">
+                <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+                <span>기본 정보</span>
+                <hr />
             </div>
         </div>
-        <div class="form-group">
-            <label asp-for="Engname" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Engname" class="form-control" />
-                <span asp-validation-for="Engname" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Email" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Phone" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Phone" class="form-control" />
-                <span asp-validation-for="Phone" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Mobile" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Mobile" class="form-control" />
-                <span asp-validation-for="Mobile" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Department" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <select asp-for="Department" class ="form-control" asp-items="ViewBag.Department"></select>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Position" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Position" class="form-control" />
-                <span asp-validation-for="Position" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <div class="checkbox">
-                    <input asp-for="Ismaster" />
-                    <label asp-for="Ismaster"></label>
+
+        <form class="form-horizontal" id="UserCreateForm" >
+            <div class="form-group">
+                <label class="col-md-2 control-label requireField">이름</label>
+                <div class="col-md-2">
+                    @*<input type="text" id="Name" name="Name" class="form-control" placeholder="거래처 이름" />*@
+
+                    <div class="input-group">
+                        <input type="text" id="Name" name="Name" class="form-control"
+                               placeholder="사용자이름" aria-describedby="users name" />
+                        <span class="input-group-btn">
+                            <button type="button" class="btn btn-default" onclick="ContactsSearchPop();">
+                                <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                            </button>
+                        </span>
+                    </div>
+                </div>
+
+                <label class="col-md-2 control-label">영어이름</label>
+                <div class="col-md-2">
+                    <input type="tel" id="Phone" name="Phone" class="form-control" placeholder="English name" />
+                </div>
+
+                <label class="col-md-2 control-label">이메일</label>
+                <div class="col-md-2">
+                    <input type="email" id="Email" name="Email" class="form-control" placeholder="사용자이메일"/>
                 </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Token" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Token" class="form-control" />
-                <span asp-validation-for="Token" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Keybox" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Keybox" class="form-control" />
-                <span asp-validation-for="Keybox" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <div class="checkbox">
-                    <input asp-for="Excelauth" />
-                    <label asp-for="Excelauth"></label>
+
+            <div class="form-group">
+                <label class="col-md-2 control-label requireField">비밀번호</label>
+                <div class="col-md-2">
+                    <input type="password" id="Pw" name="Pw" class="form-control" placeholder="비밀번호" />
+                </div>
+
+                <label class="col-md-2 control-label requireField">비밀번호확인</label>
+                <div class="col-md-2">
+                    <input type="password" id="RePw" name="RePw" class="form-control" placeholder="비밀번호확인" />
+                </div>
+
+                <label class="col-md-2 control-label">엑셀권한</label>
+                <div class="col-md-2">
+                    <label class="radio-inline">
+                        <input type="radio" id="Isused_T" name="Isused" value="true" />예
+                    </label>
+                    <label class="radio-inline">
+                        <input type="radio" id="Isused_F" name="Isused" value="false" checked="checked" />아니오
+                    </label>
                 </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Level" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Level" class="form-control" />
-                <span asp-validation-for="Level" class="text-danger"></span>
+
+            <div class="form-group">
+                
+                <label class="col-md-2 control-label">유선전화</label>
+                <div class="col-md-2">
+                    <input type="text" id="aa" name="aa" class="form-control" placeholder="전화[02-000-0000]" />
+                </div>
+
+                <label class="col-md-2 control-label">휴대전화</label>
+                <div class="col-md-2">
+                    <input type="text" id="ss" name="ss" class="form-control" placeholder="휴대전화[010-0000-0000]" />
+                </div>
             </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Createdate" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Createdate" class="form-control" />
-                <span asp-validation-for="Createdate" class="text-danger"></span>
+
+            <div class="form-group">
+                <label class="col-md-2 control-label requireField">부서</label>
+                <div class="col-md-2">
+                    <select id="Department" name="Department" class="form-control"></select>
+                </div>
+
+                <label class="col-md-2 control-label requireField">직급</label>
+                <div class="col-md-2">
+                    <select id="Position" name="Position" class="form-control"></select>
+                </div>
+
+                <label class="col-md-2 control-label requireField">시스템등급</label>
+                <div class="col-md-2">
+                    <select id="Level" name="Level" class="form-control"></select>
+                </div>
+            </div>            
+        </form>
+
+        <div class="row">
+            <div class="col-md-offset-8 col-md-2 custom-row-btn-margin">
+                <button type="button" id="CreateAccountButton" class="btn btn-default" onclick="SubmitForm();">
+                    <span class="glyphicon glyphicon-floppy-disk" aria-hidden="true"></span>
+                    저장
+                </button>
             </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Createuser" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Createuser" class="form-control" />
-                <span asp-validation-for="Createuser" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Modifydate" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Modifydate" class="form-control" />
-                <span asp-validation-for="Modifydate" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="Modifyuser" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Modifyuser" class="form-control" />
-                <span asp-validation-for="Modifyuser" class="text-danger"></span>
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+            <div class="col-md-2 custom-row-btn-margin">
+                <a href="/Users/Index" class="btn btn-default">
+                    <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+                    목록
+                </a>
             </div>
         </div>
     </div>
-</form>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
-
